--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,29 @@
 @import "tailwindcss";
 
 @plugin "daisyui" {
-  themes: light --default, dark;
+  /* themes: light --default, dark; */
  
 }
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  /* FULL NAME VARIABLES (for your own use) */
+    --p: 355 74% 41%;   /* primary */
+  --s: 0 100% 24%;   /* secondary */
+  --a: 24 94% 54%;   /* accent */
+  --n: 222 47% 11%;  /* neutral */
+
+  --b1: 43 82% 91%;  /* base-100 */
+  --b2: 220 14% 96%; /* base-200 */
+  --b3: 220 13% 91%; /* base-300 */
+
+  --in: 215 16% 47%; /* info */
+  --su: 145 67% 36%; /* success */
+  --wa: 24 94% 54%;  /* warning */
+  --er: 355 74% 41%; /* error */
+}
+
 .container{
 max-width:1440px;
 /* padding: 16px; */
@@ -32,4 +52,14 @@ margin: 0 auto;
 }
 .block_nav a:hover{
   @apply text-black border-l-gray-400 bg-gray-200;
+}
+
+
+@layer components {
+  h1 { @apply text-4xl md:text-6xl font-extrabold leading-tight tracking-tight mb-4; }
+  h2 { @apply text-3xl md:text-5xl font-bold       leading-snug  tracking-tight mb-3.5; }
+  h3 { @apply text-2xl md:text-4xl font-semibold   leading-snug  mb-3; }
+  h4 { @apply text-xl md:text-2xl  font-semibold   leading-snug  mb-2.5; }
+  h5 { @apply text-lg md:text-xl   font-medium     leading-normal mb-2; }
+  h6 { @apply text-base md:text-lg  font-medium     leading-normal mb-1.5; }
 }
