--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 max-width:1440px;
 /* padding: 16px; */
 margin: 0 auto;
-@apply px-4;
+/* @apply px-4; */
 }
 
 
@@ -62,4 +62,16 @@ margin: 0 auto;
   h4 { @apply text-xl md:text-2xl  font-semibold   leading-snug  mb-2.5; }
   h5 { @apply text-lg md:text-xl   font-medium     leading-normal mb-2; }
   h6 { @apply text-base md:text-lg  font-medium     leading-normal mb-1.5; }
+}
+
+.error{
+  @apply alert text-red-500;
+}
+
+.my-btn{
+  @apply px-8 py-4 rounded-xl bg-white text-red-700 font-semibold hover:bg-gray-100 transition
+}
+
+.my-btn2{
+  @apply bg-linear-to-tr from-red-300 to-blue-200;
 }
